--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@
 .edrea_checklist {
     margin-top: 3rem
 }
+li.info-tipos h5{
+    line-height: 2;
+}
 
 html {
     overflow-x: hidden;
@@ -811,10 +814,15 @@ h6 {
     font-size: 13rem;
     line-height: 90px;
     margin-bottom: 3rem;
+    text-shadow: 1px 20px 17px rgb(0 0 0 / 30%);
 }
 
 .edrea_hero .title span {
     color: #FFDD00;
+}
+
+h5.copy-hero {
+    text-shadow: 16px 14px 20px rgb(0 0 0);
 }
 
 .edrea_hero .description {
@@ -1151,9 +1159,9 @@ body.dark .edrea_about {
 }
 
 .edrea_information .info_left {
-    width: 50%;
+    width: 44vw;
     float: left;
-    padding-right: 60px;
+    padding-right: 4rem;
 }
 
 .edrea_information .info_left ul {
@@ -1212,7 +1220,7 @@ body.dark .edrea_about {
 }
 
 .edrea_information .info_left p {
-    font-family: "DM Sans";
+    font-family: "Poppins";
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -1221,8 +1229,8 @@ body.dark .edrea_about {
 }
 
 .edrea_information .info_right {
-    width: 50%;
-    padding-left: 60px;
+    width: 35vw;
+    /*padding-left: 60px;*/
     float: left;
 }
 
@@ -2415,7 +2423,7 @@ body.intro .loader_line:after {
     }
 
     .edrea_information .info_left h3 {
-        font-size: 30px;
+        font-size: 1.5rem;
     }
 
     .edrea_information .info_left {
