--- a/css/dark.css
+++ b/css/dark.css
@@ -187,7 +187,7 @@ body.dark .edrea_prevnext a {
 }
 
 body.dark .edrea_prevnext a:hover {
-    color: #FFDD00;
+    color: #000000;
 }
 
 body.dark .edrea_testi_slider .quote .svg {
