--- a/css/style.css
+++ b/css/style.css
@@ -1238,7 +1238,7 @@ body.dark .edrea_about {
 }
 
 .edrea_information .edrea_title {
-    margin-bottom: 54px;
+    /*margin-bottom: 54px;*/
 }
 
 .edrea_checklist ul {
