--- a/css/dark.css
+++ b/css/dark.css
@@ -179,7 +179,7 @@ body.dark .edrea_service_list .service_item:hover {
 }
 
 body.dark .edrea_information .info_left .item {
-    background-color: #111319;
+    background-color: #111318;
 }
 
 body.dark .edrea_prevnext a {
@@ -187,7 +187,7 @@ body.dark .edrea_prevnext a {
 }
 
 body.dark .edrea_prevnext a:hover {
-    color: #000000;
+    color: #ffdd04;
 }
 
 body.dark .edrea_testi_slider .quote .svg {
